# ai-red-team-agent-framework

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  THREAT_MODEL.md
src/: app.py  main.py
