[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_red_team_agent_framework"
version = "0.1.0"
description = "Automate adversarial testing against models, APIs, and workflows."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
